--- a/tasks/glusterfs-volume.yml
+++ b/tasks/glusterfs-volume.yml
@@ -1,22 +1,28 @@
 - name: Check if Gluster volumes already exist.
-  shell: "gluster volume info"
+  shell: "gluster volume info {{ gluster_brick_name }}"
   changed_when: false
+  failed_when: false
   register: gluster_volume_info
+  when: "inventory_hostname in gluster_servers[0]"
 
 - name: Creates brick directory
   file: state=directory path=/var/lib/bricks/{{ gluster_brick_name }}
-  when: '"Volume Name: {{ gluster_brick_name }}" not in gluster_volume_info.stdout'
 
 # Create gluster volume on first server
 - name: Create Gluster volume
   shell: "gluster volume create {{ gluster_brick_name }} {{ gluster_brick_config }} force"
   register: gluster_volume_create
-  changed_when: "'successful' in gluster_volume_create.stdout"
-  when: "inventory_hostname in gluster_servers[0] and 'Volume Name: {{ gluster_brick_name }}' not in gluster_volume_info.stdout"
+  changed_when: "'success' in gluster_volume_create.stdout"
+  when: "inventory_hostname in gluster_servers[0] and 'does not exist' in gluster_volume_info.stderr"
+
+- name: Check volume again
+  shell: "gluster volume info {{ gluster_brick_name }}"
+  changed_when: false
+  register: gluster_volume_info_again
 
 - name: Ensure Gluster volume is started
   shell: "gluster volume start {{ gluster_brick_name }}"
   register: gluster_volume_start
-  changed_when: "'successful' in gluster_volume_start.stdout"
-  when: "inventory_hostname in gluster_servers[0] and 'Volume Name: {{ gluster_brick_name }}' not in gluster_volume_info.stdout"
+  changed_when: "'success' in gluster_volume_start.stdout"
+  when: "inventory_hostname in gluster_servers[0] and 'Status: Started' not in gluster_volume_info_again.stdout"
 
