--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,4 @@
 - name: Restart glusterd
-  service: name=glusterfs-server state=restarted
+  service:
+    name: glusterfs-server
+    state: restarted
