--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,1 +1,4 @@
-- include: glusterfs-volume.yml tags=glusterfs-volume,glusterfs
+- include: glusterfs-volume.yml
+  tags:
+    - glusterfs-volume
+    - glusterfs
