--- a/tasks/glusterfs-volume.yml
+++ b/tasks/glusterfs-volume.yml
@@ -1,30 +1,16 @@
-- name: Check if Gluster volumes already exist.
-  shell: "gluster volume info {{ gluster_brick_name }}"
-  changed_when: false
-  failed_when: false
-  register: __gluster_volume_info
-  when: "inventory_hostname in gluster_servers[0]"
-
 - name: Creates brick directory
   file:
     state: directory
     path: "{{ gluster_bricks_dir }}/{{ gluster_brick_name }}"
 
-# Create gluster volume on first server
-- name: Create Gluster volume
-  shell: "gluster volume create {{ gluster_brick_name }} {{ gluster_brick_config }} force"
-  register: __gluster_volume_create
-  changed_when: "'success' in gluster_volume_create.stdout"
-  when: "inventory_hostname in gluster_servers[0] and 'does not exist' in __gluster_volume_info.stderr"
-
-- name: Check volume again
-  shell: "gluster volume info {{ gluster_brick_name }}"
-  changed_when: false
-  register: __gluster_volume_info_again
-
-- name: Ensure Gluster volume is started
-  shell: "gluster volume start {{ gluster_brick_name }}"
-  register: __gluster_volume_start
-  changed_when: "'success' in __gluster_volume_start.stdout"
-  when: "inventory_hostname in gluster_servers[0] and 'Status: Started' not in __gluster_volume_info_again.stdout"
-
+- name: Creates volumes
+  gluster_volume:
+    state: present
+    name: "{{ item.name }}"
+    brick: "{{ item.brickdir }}"
+    replicas: "{{ groups[gluster_servers_group] | length }}"
+    cluster: "{{ groups[gluster_servers_group] | join('-' + gluster_interface + ',') }}"
+    host: "{{ inventory_hostname }}"
+    force: yes
+  run_once: true
+  with_items: gluster_volumes
