Adds support for 2 gluster options
Added support for gluster_nfs_disable and gluster_performance_cache_size

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,6 @@
 ---
 # defaults file for testrole
 gluster_bricks_dir: /var/lib/bricks
+
+gluster_performance_cache_size: "32MB"
+gluster_nfs_disable: false
